# open_ptrack

detection/: CMakeLists.txt  CMakeLists.txt~
detection/apps/: ground_based_people_detector_node.cpp  ground_based_people_detector_node.cpp~  haardispada_node.cpp  haardispada_node.cpp~  save_roi.cpp
detection/conf/: ground_.txt  ground_camera_depth_optical_frame.txt  ground_imgRGB_0036.txt  ground_imgRGB_0037.txt  ground_imgRGB_0038.txt  ground_imgRGB_0039.txt  ground_imgRGB_0042.txt  ground_imgRGB_0043.txt  ground_imgRGB_0044.txt  ground_imgRGB_0045.txt  ground_imgRGB_0049.txt  ground_imgRGB_0050.txt  ground_imgRGB_0054.txt  ground_imgRGB_0061.txt  ground_imgRGB_0069.txt  ground_imgRGB_0085.txt  ground_imgRGB_0086.txt  ground_imgRGB_0113.txt  ground_imgRGB_0126.txt  ground_imgRGB_0144.txt  ground_imgRGB_0152.txt  ground_imgRGB_0180.txt  ground_imgRGB_0184.txt  ground_imgRGB_0186.txt  ground_imgRGB_0193.txt  ground_imgRGB_0202.txt  ground_imgRGB_0207.txt  ground_imgRGB_0243.txt  ground_imgRGB_0258.txt  ground_imgRGB_0286.txt  ground_imgRGB_0306.txt  ground_imgRGB_0325.txt  ground_imgRGB_0341.txt  ground_imgRGB_0484.txt  ground_imgRGB_0495.txt  ground_imgRGB_0602.txt  ground_imgRGB_0636.txt  ground_imgRGB_0683.txt  ground_imgRGB_0699.txt  ground_imgRGB_0785.txt  (+10 more)
detection/launch/: detector_depth.launch  detector_depth.launch~  openni.launch~
detection/src/: detection.cpp~
opt_follow/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
opt_follow/apps/: following.cpp  following.cpp~  following_client.cpp  following_depth.cpp
opt_follow/include/open_ptrack/opt_follow/: FeatureExtractor.h  FeatureExtractor.h~  FeatureGenerator.h~  SubscriberList.h
opt_follow/launch/: depth_follower.launch  depth_follower.launch~  follow.launch~  follower.launch  follower.launch~  follower_service.launch  follower_service.launch~  follower_service_openni.launch  follower_viewer.launch  openni_follower_service.launch  viewer_follower_service.launch  viewer_follower_service_openni.launch  viewer_openni_follower_servicelaunch
opt_follow/src/: FeatureExtractor.cpp  FeatureExtractor.cpp~
opt_msgs/: CMakeLists.txt  CMakeLists.txt~
opt_utils/: CMakeLists.txt  CMakeLists.txt~
opt_utils/apps/: addCameraInfo.cpp  addCameraInfo.cpp~  roi_viewer.cpp  roi_viewer.cpp~  target_viewer.cpp  target_viewer.cpp~
opt_utils/launch/: asus.launch  asus_view.launch  (+28 more)
scripts/: calibration_toolkit_install.sh  libfreenect_update.sh  openptrack_install.sh  openptrack_install.sh~
(+13 files in other folders)
