<?xml version="1.0"?>
<package>
  <name>opt_follow</name>
  <version>0.0.0</version>
  <description>Follower module.</description>

  <maintainer email="edu@todo.todo">edu</maintainer>

	<license>TODO</license>

	<author email="edu@todo.todo">edu</author>


	<!-- <build_depend>message_generation</build_depend>

	<run_depend>message_runtime</run_depend>
	-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>opt_utils</build_depend>
	<build_depend>opt_msgs</build_depend>
	<build_depend>detection</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
	<run_depend>opt_utils</run_depend>
	<run_depend>opt_msgs</run_depend>
	<run_depend>detection</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
